--- a/src/components/ItemListContainer/ItemListContainer.css
+++ b/src/components/ItemListContainer/ItemListContainer.css
@@ -1,3 +1,12 @@
 .item-list-container {
-  padding: 3rem;
+  background-color: antiquewhite;
+  padding-top: 1.8rem;
+  padding-bottom: 4.5rem;
+  max-width: 100%;
+}
+
+.title-products {
+  padding-top: 3rem;
+  font-size: 3rem;
+  color: black;
 }
