--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -1,18 +1,16 @@
-.style-card {
-  width: 15rem;
-  text-align: center;
-  margin-bottom: 1rem;
-}
-
 .card-title {
-  font-size: 28px;
+  font-size: 24px;
   font-weight: 400;
-  font-family: "Playfair Display", serif;
-  padding-top: 1rem;
+  font-family: sans-serif;
 }
 
 .price-text {
   font-size: 22px;
   font-weight: bold;
   font-family: sans-serif;
+}
+
+.border-bottom1 {
+  border-bottom: 2px solid grey;
+  margin-bottom: 2rem;
 }
