--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,7 +1,7 @@
 .header {
-  background: url("../../assets/images/banner.jpg") no-repeat center;
+  background: url("../../assets/images/banner2.jpg") no-repeat center;
   background-size: cover;
-  min-height: 100vh;
+  min-height: 60vh;
 }
 
 .menu-navbar {
