--- a/src/components/CartWidget/CartWidget.css
+++ b/src/components/CartWidget/CartWidget.css
@@ -1,5 +1,25 @@
 .icon-cart {
+  display: flex;
+  text-align: end;
+  margin-right: 2rem;
+  align-items: center;
+  position: relative;
+  justify-content: flex-end;
   color: black;
-  font-size: 2.5rem;
-  padding-right: 1rem;
+}
+
+.number-cart {
+  position: absolute;
+  width: 2.2rem;
+  height: 2.2rem;
+  right: 2.5rem;
+  top: 1.3rem;
+  border-radius: 50%;
+  background: #f2c12e;
+  color: black;
+  box-sizing: border-box;
+  font-size: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
